# EOF3R

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
baselines/: registry.yaml
configs/: default.yaml  plot_style.yaml
configs/cloud/: .gitkeep
configs/robot/: .gitkeep
docs/: current_issues.md  engineering.md  evaluation_report.md  experiments.md  lit_review.md  phase_b_vram_estimation.md  project_audit.md  project_scope.md  risks.md  roadmap.md  standards.md  todo.md
docs/lit_notes/: 2dgs_huang2024.md  _template.md  dust3r_wang2024.md  fogros2_chen2023.md  hybridgs_lin2025.md  langsplat_qin2024.md  latentsplat_wewer2024.md  legaussians_shi2024.md  mast3r_leroy2024.md  objectgs_zhu2025.md  phaseb_deepdive_2026-06-19.md  phaseb_design_2026-06-19.md  pixelsplat_charatan2024.md  starship_delivery_tech.md  survey_2026-06-18_three_directions.md
eof3r/: .pre-commit-config.yaml  pyproject.toml  requirements.txt
eof3r/configs/: default.yaml  plot_style.yaml
eof3r/scripts/: setup_mvsplat.sh  setup_resplat.sh
eof3r/src/: __init__.py
eof3r/tests/: test_training.py
experiments/: 2026-06-19_phase_b_implementation.md  exp_template.md
lit_notes/: 3dgs_kerbl2023.md  feature3dgs_zhou2024.md  gaussianformer_huang2024.md  mipsplatting_yu2024.md  mvsplat_chen2024.md  nav2_costmap2d_docs.md  nav2_planning_docs.md  occ3d_tian2023.md  sam2_ravi2024.md  unboundedgs_2024.md  vggt_wang2025.md  yoloworld_cheng2024.md
scripts/eval/: test_e2e_pipeline.py  verify_mvsplat_bev.py
src/background/: __init__.py  vggt_wrapper.py
src/costmap/: __init__.py
(+38 files in other folders)
